--- a/TestTask1.Web/Views/Home/Index.cshtml
+++ b/TestTask1.Web/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model TestTask1.Web.ViewModels.CompanyInfoViewModel
+@{
+    ViewData["Title"] = "Головна";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">@Model.Name</h1>
+    <p>Адреса: @Model.Address</p>
+    <p>Номер телефону: @Model.PhoneNumber</p>
 </div>
